<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#F5DC49"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        />

    <TableLayout
        android:layout_below="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"

        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_playAction_text_id"
                android:id="@+id/textView_input_id"
                android:layout_column="0"
                />

            <EditText
                android:id="@+id/actionset_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_column="1"
                />
        </TableRow>



        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_playAction_api"
                android:id="@+id/textview_playAction_api"
                android:layout_column="0"
                />


            <Button
                android:id="@+id/btn_actionsetstart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_playAction_less"
                android:layout_column="1"
                />

        </TableRow>


        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robotapi_cancelCommand_api"
                android:id="@+id/textview_cancelcommand_api"
                android:layout_column="0"
                />

            <Button
                android:id="@+id/btn_actionsetstop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robotapi_cancelCommand_less"
                android:layout_column="1"/>

        </TableRow>

    </TableLayout>



</RelativeLayout>