<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asus.robotdevsample.VisionActivity"
    android:clickable="false">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#F5DC49"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/textview_title"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision_requestDetectPerson_api"
                android:id="@+id/textview_vision_requestDetectPerson" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vision_requestDetectPerson_less"
                    android:id="@+id/DetectPerson" />
            </TableRow>

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision_cancelDetectPerson_api"
                android:id="@+id/textview_vision_cancelDetectPerson" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vision_cancelDetectPerson_less"
                    android:id="@+id/CancelDetectPerson" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>
