<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#F5DC49"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        />

    <TableLayout
        android:layout_below="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/tableLayout"
        android:stretchColumns="0,1,2,3,4,5">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_playEmotionalAction_text_id"
                android:id="@+id/textView_input_emotional_action_example"
                android:layout_column="0"
                />


            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_emotional_action_example_candidate"
                android:layout_alignParentStart="true"
                android:layout_column="1"
                />

        </TableRow>



        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_playEmotionalAction_api"
                android:id="@+id/textview_playEmotionalAction_api"
                android:layout_column="0"
                android:layout_span="5"
                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_setExpression_less"
                android:id="@+id/btn_setEmotionalAction"
                android:layout_column="1"
                />

        </TableRow>

    </TableLayout>




</RelativeLayout>